// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renderer a link home in isolated mode 1`] = `
<Styled(ToolbarButton)
  href="blank#/"
  title="Show all components"
>
  <MdFullscreenExit />
  <span
    hidden={true}
  >
    Show all components
  </span>
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to example isolated mode 1`] = `
<Styled(ToolbarButton)
  href="blank#!/Pizza/3"
  title="Open isolated"
>
  <MdFullscreen />
  <span
    hidden={true}
  >
    Open isolated
  </span>
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to isolated mode 1`] = `
<Styled(ToolbarButton)
  href="blank#!/Pizza"
  title="Open isolated"
>
  <MdFullscreen />
  <span
    hidden={true}
  >
    Open isolated
  </span>
</Styled(ToolbarButton)>
`;
